--- a/package.json
+++ b/package.json
@@ -13,13 +13,15 @@
     "crypto-js": "^4.1.1",
     "next": "12.1.5",
     "react": "18.0.0",
-    "react-dom": "18.0.0"
+    "react-dom": "18.0.0",
+    "ua-parser-js": "^1.0.2"
   },
   "devDependencies": {
     "@types/crypto-js": "^4.1.1",
     "@types/node": "17.0.25",
     "@types/react": "18.0.6",
     "@types/react-dom": "18.0.2",
+    "@types/ua-parser-js": "^0.7.36",
     "@types/web-bluetooth": "^0.0.14",
     "eslint": "8.14.0",
     "eslint-config-next": "12.1.5",
