--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "12.1.5",
     "react": "18.0.0",
     "react-dom": "18.0.0",
+    "sharp": "^0.30.4",
     "ua-parser-js": "^1.0.2"
   },
   "devDependencies": {
