--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   hive: ^2.2.2
   hive_flutter: ^1.1.0
   flutter_secure_storage: ^5.0.2
+  flutter_blue_plus: ^1.1.3
+  encrypt: ^5.0.1
 
 dev_dependencies:
   flutter_test:
