--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -39,7 +39,8 @@ dependencies:
   hive_flutter: ^1.1.0
   flutter_secure_storage: ^5.0.2
   flutter_blue_plus: ^1.1.3
-  encrypt: ^5.0.1
+  pointycastle: ^3.6.0
+  hex: ^0.2.0
 
 dev_dependencies:
   flutter_test:
