--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   flutter_blue_plus: ^1.1.3
   pointycastle: ^3.6.0
   hex: ^0.2.0
+  animated_fractionally_sized_box: ^2.0.1
 
 dev_dependencies:
   flutter_test:
