--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   hex: ^0.2.0
   animated_fractionally_sized_box: ^2.0.1
   provider: ^6.0.3
+  modal_bottom_sheet: ^2.1.0
 
 dev_dependencies:
   flutter_test:
