--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -1,5 +1,5 @@
-name: app
-description: A new Flutter project.
+name: mooovy
+description: App for your VanMoof S3 & X3 with features that are unavailable to access inside the normal app.
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
@@ -57,6 +57,8 @@ dev_dependencies:
   flutter_lints: ^2.0.0
   hive_generator: ^1.1.3
   build_runner: ^2.1.11
+  flutter_launcher_icons: "^0.9.2"
+
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -98,3 +100,7 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/icon/icon.png"
