--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   animated_fractionally_sized_box: ^2.0.1
   provider: ^6.0.3
   modal_bottom_sheet: ^2.1.0
+  flutter_native_select: ^1.0.0
 
 dev_dependencies:
   flutter_test:
