--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "caniuse-lite": "^1.0.30001521",
     "compare-versions": "^5.0.1",
     "next": "12.2.0",
     "next-pwa": "^5.5.4",
