--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "next-pwa": "^5.5.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "ua-parser-js": "^1.0.2"
+    "ua-parser-js": "^1.0.2",
+    "zod": "^3.22.1"
   },
   "devDependencies": {
     "@types/node": "18.0.1",
